JLINK: package cli and lsp together